// score_viewer/Cargo.toml
[package]
name = "score_viewer"
version = "2.0.0-pre1"
edition = "2021"
authors = ["Joona Holkko"]
description = "Score Viewer application for viewing results from CSV and Google Sheets"

[dependencies]
iced = { version = "0.10", features = ["tokio", "image"] }
csv = "1.2"
tokio = { version = "1", features = ["full"] }
google-sheets4 = "5.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yup-oauth2 = "8.3"
once_cell = "1.18"
chrono = "0.4"
rfd = "0.12"
